# AgentBOX

./: .gitignore  .gitmodules  .shellcheckrc  CLAUDE.md  README.md
.planning/: REQUIREMENTS.md
.skill/: SKILL.md  artifacts.md  define.md  execute.md  scaffold.md  ship.md  track.md  verify.md
build-log/: mailbox-one-t2-build-log-v0_8-2026-04-25.md
caddy/: Caddyfile  entrypoint.sh
config/: Caddyfile.funnel.template  docker-compose.override.yml.template
dashboard/: CLAUDE.md  package-lock.json  package.json
docs/: CONTEXT-phase-0-v1.0.0.md  CONTEXT-phase-1-v1.0.0.md  CONTEXT-phase-2-v1.0.0.md  PRD-ADDENDUM-001-cloud-inference.md  PRD-v1.0.0.md  README.md  ROADMAP-v1.0.0.md  RUNBOOK.md  STATE-v1.1.1.md  STATE-v1.2.0.md  addendum-agentbox-absorb-monorepo-v0_1-2026-06-07.md  addendum-mailbox-multi-account-v0_1-2026-05-20.md  addendum-mbox-451-cloudflare-dashboard-selfserve-v0_1-2026-06-07.md  adr-mailprovider-abstraction-v0_1-2026-05-28.md  agentbox-jp72-reproduction.v0.1.0.md  biometricbox-bringup-plan.v0.1.0.md  brain-graph-tab-prd.v0.1.0.md  ci-cd-deployer.v0.1.0.md  compose-send-design.v0.1.0.md  dashboard-simplification-prd.v0.1.0.md  gbrain-task-miner.v0.1.0.md  google-connect-prd.v0.1.0.md  google-ingestion-unification-prd.v0.1.0.md  hermes-gbrain-memory-integration-prd.v0.1.0.md  kanban-linear-ux.v0.1.0.md  mailbox-to-hermes-migration-audit.v0.1.0.md  mbox-482-deploy-runbook.v0.1.0.md  memo-nemotron-license-review-v0_1-2026-05-13.md  n8n-credential-unification-prd.addendum-01.md  n8n-credential-unification-prd.addendum-02.md  n8n-credential-unification-prd.v0.1.0.md  news-feedback-learning-prd.v0.1.0.md  onboarding-wizard-design.v0.1.0.md  orgchart-tasks-provider.v0.1.0.md  pitch-deck-thumbox-v0_1_0-2026-05-31.md  plan-mbox-468-onboarding-port-v0_1.md  (+8 more)
optimization/style-vectors/: .gitignore  README.md  pyproject.toml
optimization/style-vectors/tests/: test_steer.py
(+909 files in other folders)
